# kafka-sse-gateway

./: Cargo.toml  Dockerfile  ReadMe.md  produce-test-data.sh
assets/: script.js
src/: kafka.rs  main.rs
