[package]
name = "kafka-sse-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.28.0" }
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
chrono = "0.4.0"
#clap = "2.18.0"
env_logger = "0.9.0"
log = "0.4.8"
rand = "0.8.5"
axum = { version = "0.5", features = ["headers"] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
headers = "0.3"
async-stream = "0.3"